Fix text alignment for h1 and h2 elements

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -5,7 +5,7 @@ body {
 	}
 	
 	h1, h2 {
-		text-align: left
+		text-align: left;
 		font-family: 'Noto Sans' sans-serif;
 		}
 		
